--- a/style.css
+++ b/style.css
@@ -2,6 +2,92 @@ body {
   background: #20083B 75%;
 }
 
+.collections__div {
+  display: flex;
+  align-items: center;
+}
+.collections__div__title {
+  font-family: Orbitron;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 33px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #ffffff;
+  flex: 1;
+}
+.collections__div__view {
+  font-family: Orbitron;
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 33px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #ffffff;
+}
+.collections__card-div {
+  display: flex;
+  justify-content: space-between;
+}
+.collections__card {
+  color: #FFFFFF;
+  width: 437.76px;
+  height: 564.89px;
+  border: 2.88px solid;
+}
+.collections__card-background {
+  width: 431.13px;
+  height: 205.62px;
+  background: url("../assets/images/unsplash_NTYYL9Eb9y8.png");
+  background-repeat: no-repeat;
+}
+.collections__card-content {
+  position: relative;
+}
+.collections__card-content__img {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, -80%);
+}
+.collections__card-content__title {
+  font-family: Rajdhani;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 46px;
+  letter-spacing: 0px;
+  text-align: center;
+}
+.collections__card-content__user {
+  font-family: Rajdhani;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 46px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #FFB1EE;
+  display: inline;
+}
+.collections__card-content__btn {
+  width: 234.84px;
+  height: 50.85px;
+  display: block;
+  margin: 0 auto;
+  font-family: Rajdhani;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 26px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: #ffffff;
+  border: 2.41px solid transparent;
+  border-image-source: linear-gradient(272.52deg, #ffa6fa 47.49%, #3c79d5 98.81%);
+  border-image-slice: 1;
+  border-image-width: 2.41px;
+  border-image-outset: 0;
+  background: linear-gradient(92.23deg, #ff56f6 21.43%, #b936ee 50.63%, #3bace2 100%, #406aff 117.04%);
+  box-shadow: 0px 5px 117px 0px rgba(255, 86, 246, 0.5098039216);
+}
+
 .top-sellers__title {
   font-family: Orbitron;
   font-size: 26px;
@@ -133,6 +219,13 @@ body {
   padding: 10px;
 }
 .footer__column__logo {
+  width: 17px;
+  height: 27px;
+  mask-mode: luminance;
+  fill: linear-gradient(92.23deg, #FF56F6 21.43%, #B936EE 50.63%, #3BACE2 100%, #406AFF 117.04%);
+  box-shadow: 0px 4.421836853px 107.2295455933px 0px rgba(255, 86, 246, 0.51);
+}
+.footer__column__logo-text {
   font-family: Orbitron;
   font-size: 20px;
   font-weight: 700;
@@ -198,6 +291,9 @@ body {
   border-right: 1px solid #D9DBE1;
   color: #D9DBE1;
   text-decoration: none;
+}
+.copyright__list li:last-child a {
+  border-right: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
