--- a/css/partials/_buttons.scss
+++ b/css/partials/_buttons.scss
@@ -4,7 +4,7 @@
     height: 50.85px;
     display: block;
     margin: 0 auto;
-    font-family: Rajdhani;
+    font-family: $font-Rajdhani;
     font-size: 20px;
     font-weight: 600;
     line-height: 26px;
