--- a/css/top-sellers.scss
+++ b/css/top-sellers.scss
@@ -3,7 +3,7 @@
 .top-sellers {
   &__title {
     font: {
-      family: Orbitron;
+      family: $font-Orbitron;
       size: 26px;
       weight: 700;
     }
@@ -20,7 +20,7 @@
 
   &__text {
     width: 506px;
-    font-family: Roboto;
+    font-family: $font-Roboto;
     font-size: 18px;
     font-weight: 400;
     line-height: 21px;
