--- a/css/footer.scss
+++ b/css/footer.scss
@@ -19,7 +19,7 @@
         }
 
     &__logo-text {
-        font-family: Orbitron;
+        font-family: $font-Orbitron;
         font-size: 20px;
         font-weight: 700;
         line-height: 25px;
@@ -29,7 +29,7 @@
     }
 
     &__title {
-        font-family: Inter;
+        font-family: $font-Inter;
         font-size: 20px;
         font-weight: 500;
         line-height: 31px;
@@ -43,7 +43,7 @@
         list-style: none;
         padding: 0;
         color: #D9DBE1;
-        font-family: Inter;
+        font-family: $font-Inter;
         font-size: 15px;
         font-weight: 400;
         line-height: 27px;
@@ -52,7 +52,7 @@
     }
 
     &__span {
-        font-family: MuseoModerno;
+        font-family: $font-MuseoModerno;
         font-size: 22px;
         font-weight: 400;
         line-height: 27px;
@@ -69,7 +69,7 @@
     justify-content: space-between;
     align-items: center;
     color: #D9DBE1;
-    font-family: Inter;
+    font-family: $font-Inter;
     font-size: 15px;
     font-weight: 400;
     line-height: 27px;
