--- a/css/style.scss
+++ b/css/style.scss
@@ -6,8 +6,7 @@ body {
     background: #20083B 75%;
 }
 
-@import 'nav';
-@import 'main';
+@import 'header';
 @import 'collections';
 @import 'top-sellers';
 @import 'subscribe';
