--- a/css/subscribe.scss
+++ b/css/subscribe.scss
@@ -34,7 +34,7 @@
       word-wrap: break-word;
     }
 
-    &__input {
+    &__form__input {
       color: #474a57;
       font-family: $font-Inter;
       font-size: 16px;
@@ -42,26 +42,26 @@
       line-height: 19px;
       letter-spacing: 0;
       text-align: left;
-      padding: 16px 18px 16px 18px;
+      padding: 15.48px 17.69px 15.48px 17.69px;
+      border: transparent;
       border-radius: 5.53px 0 0 5.53px;
     }
 
-    &__btn {
+    &__form__btn {
       width: 143.71px;
       height: 48.64px;
       border: {
-        border: 2.41px solid transparent;
         radius: 0 5.53px 5.53px 0;
-        image-source: linear-gradient(
-          272.52deg,
-          #ffa6fa 47.49%,
-          #3c79d5 98.81%
-        );
+        image-source: linear-gradient(272.52deg,
+            #ffa6fa 47.49%,
+            #3c79d5 98.81%);
         image-slice: 1;
         image-width: 2.41px;
         image-outset: 0;
       }
+
       cursor: pointer;
+
       font: {
         family: $font-Inter;
         size: 16px;
@@ -72,14 +72,12 @@
       letter-spacing: 0;
       text-align: center;
       color: #ffffff;
-      background: linear-gradient(
-          92.23deg,
-          #ff56f6 21.43%,
-          #b936ee 50.63%,
-          #3bace2 100%,
-          #406aff 117.04%
-        ),
-        linear-gradient(272.52deg, #ffa6fa 47.49%, #3c79d5 98.81%);
+      background: linear-gradient(92.23deg,
+        #ff56f6 21.43%,
+        #b936ee 50.63%,
+        #3bace2 100%,
+        #406aff 117.04%),
+      linear-gradient(272.52deg, #ffa6fa 47.49%, #3c79d5 98.81%);
       background-origin: border-box;
       box-shadow: 0px 5px 117px 0px #ff56f682;
     }
