--- a/css/style.scss
+++ b/css/style.scss
@@ -4,10 +4,10 @@
 
 body {
     background: #20083B 75%;
+    padding: 42.01px 103px;
 }
 
 @import 'header';
 @import 'collections';
-@import 'top-sellers';
 @import 'subscribe';
 @import 'footer';
